--- a/mycv.css
+++ b/mycv.css
@@ -1,6 +1,6 @@
 .presentation {
     margin:0.5em;
-    padding:1em;
+    padding:0.2em;
     border: 0.2em solid rgb(26, 40, 40);
     border-radius:0.8em;
     text-align: center;
@@ -15,4 +15,7 @@ body {
 
 div.section {
     border-left: 0.2em solid rgb(26, 40, 40);
+    border-radius: 0.2em;
+    padding: 0.5em;
+    margin: 0.2em;
 }
