--- a/mycv.css
+++ b/mycv.css
@@ -14,8 +14,13 @@ body {
 }
 
 div.section {
-    border-left: 0.2em solid rgb(26, 40, 40);
-    border-radius: 0.2em;
+    border-left: 0.4em solid darkgreen;
+    border-radius: 0.4em;
+    margin: 1em;
+}
+
+h2.section {
+    background-color:greenyellow;
     padding: 0.5em;
-    margin: 0.2em;
+    margin: 0em;
 }
